--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 Session2/node_modules
+Session3/node_modules
+Session4/node_modules
+Session5/node_modules
+Session6/node_modules
+Session7/node_modules
+Session8/node_modules
+Session9/node_modules
