--- a/Session5/package.json
+++ b/Session5/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.2"
+    "mongoose": "^8.14.2",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
