--- a/Session6/package.json
+++ b/Session6/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.14.2",
     "validator": "^13.15.0"
   },
